--- a/public/css/styless.css
+++ b/public/css/styless.css
@@ -116,4 +116,4 @@
 #tbl-usuarios td:last-child button:nth-child(3):hover::after { content: "Activar/Desactivar"; }
 #tbl-usuarios td:last-child button:nth-child(4):hover::after { content: "Eliminar"; }
 
-@keyframes fadeInTooltip { to { opacity: 1; } 
+@keyframes fadeInTooltip { to { opacity: 1; } }
